Trying to fix issues with the spinner not showing on backdrop

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1381,3 +1381,8 @@ b {
   width: 5.5rem !important;
   height: 5.5rem !important;
 }
+
+
+.MuiCircularProgress-circle.MuiCircularProgress-circleIndeterminate.css-14891ef {
+  z-index: 999999 !important;
+}
